@@ -98,6 +98,11 @@ Build
 * GITHUB#12215: Upgrade forbiddenapis to version 3.5.  This tones down some verbose warnings
   printed while checking Java 19 and Java 20 sourcesets for the MR-JAR.  (Uwe Schindler)
 
+Documentation
+---------------------
+
+* GITHUB#10633: Update javadocs in TestBackwardsCompatibility to use gradle and not ant. (Usman Shaikh)
+
 Other
 ---------------------
 
